@@ -1,5 +1,8 @@
 package org.example.PKB.API;
 
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.Set;
 
 public enum EntityType {
@@ -22,7 +25,9 @@ public enum EntityType {
     STRING,
     BLANK,
     PROG_LINE;
-    private static final Set<EntityType> STMT_TYPES = Set.of(EntityType.IF, EntityType.ASSIGN, EntityType.WHILE);
+    private static final Set<EntityType> STMT_TYPES = Collections.unmodifiableSet(
+            new HashSet<>(Arrays.asList(EntityType.IF, EntityType.ASSIGN, EntityType.WHILE))
+    );
     public boolean allows(EntityType type) {
         return this == type || (this == EntityType.STMT && STMT_TYPES.contains(type));
     }
